2007-10-31	Marzo Sette Torres Junior <marzojr@yahoo.com>
	Fixed a few opcode bugs. Also, swapped the purpose of cnt1 and cnt2 in the
	repeat2 script opcode and removed the initial "reset" of the counter. Both
	changes are verified in the originals.

2007-10-30	Marzo Sette Torres Junior <marzojr@yahoo.com>
	Fixed crash whan attacking objects bare-handed.

2007-10-29	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* monsters.cc: Setting quality for monster equipment only if it is a weapon
	  that uses charges.
	* actors.cc: Preventing actors from taking a step if it would change their
	  z coordinate by more than 1. NPCs now look for combat more often. Lastly,
	  paralyze flag completely prevents movement.
	* gamewin.cc: Paralyze flag completely prevents avatar from moving.
	* combat.cc: Entering combat mode with a readied spellbook no longer makes
	  it disappear with SI paperdolls.
	* schedule.cc: Scripts in patrol schedule are no longer dont_halt.
	* egg.cc: Increased duration of continuous weather eggs to 100 hours.
	  This has been confirmed in the originals.

2007-10-26	Marzo Sette Torres Junior <marzojr@yahoo.com>
	Fixing recently introduced distance calculation bug.

2007-10-23	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* effects.*, shapes/miscinf.*, data/*: Added ability to specify explosion
	  SFX based on shape. This seems to better match the originals' behavior.
	* usecode/*: Added a few usecode script opcodes and modified the behavior
	  of another, all based on the originals:
	  - music opcode causes it to loop indefinitely if the high-byte is nonzero.
	  - reset opcode (0xa) which causes a script to go back to the start.
	  - delay_minutes (0x28) which works like its name suggests.
	  - weather opcode (0x5A) which allows scripts to change weather.
	  delay_hours has also been fixed so now it works.
	* actors.*: Removed a few redundant cases from Actor::figure_weapon_pos.
	  Changed maximum value of food stat and added new behavior for set/get_prop